--- a/style/style.css
+++ b/style/style.css
@@ -104,7 +104,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #84c8f0;
+    background-color: #FFFFFF;
     width: 720px;
     height: 410px;
     display: -webkit-box;
